<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="tit">Login</string>
    <string name="app_name">Log</string>
	    <string name="name">User Name</string>
        <string name="pass">Password</string>
                <string name="yes">Submit</string>
                <string name="re">Reset</string>
                
	    <color name="bg">#00e5ff</color>
	    <color name="but">#ff008d</color>
	    <color name="txt">#0009ff</color>
	     <color name="in">#ff1f74</color>
</resources>